# bright-disputes

./: .gitignore  .gitmodules  README.md
.github/workflows/: build.yml
cli/: Cargo.toml  README.md
cli/lib/: Cargo.toml  helpers.rs  lib.rs
cli/src/: application.rs  bright_disputes.rs  bright_disputes_ink.rs  config.rs  helpers.rs  lib.rs  main.rs
contract/: Cargo.toml
contract/src/: contract.rs  dispute.rs  dispute_round.rs  error.rs  jure.rs  juror.rs  lib.rs  types.rs  vote.rs
doc/: README.md  README_CLI.md  showcase_cli.mov
doc/accounts/: 5CFysjxm4tWyePnpELf4xG2o3ZvQV5WVdfvcETn552rYA8h9.json  5CS1o2oMdptJ2owGABQd8Q2TJXSYnLiQjKMWRGnRnSw36RwP.json  5CS8L2eS3sbYUcR6b5cvH93DZWiwCGXH4WJzSwTcHmAZekUj.json  5CSdKZuEYAbaH1nB8rbxqJU5PDtgTtCB5pj4abqQAhimdLU1.json  5CSdvQ1mG1j6tsyMib46kFHpwdUqizvWs1NTHGLzQWpNRbrK.json  5CSvSo9vt1eu4d93EobfA6au8bheGLbkTdvATLb9RPVKgu9b.json  5ChhBGUJJLxPk2EJzDN6aeuA7yx7bBBGxgZx5iSr9rMhegrM.json  5DfNSomECQZkpJJPi8CnBt3aFSAcbDJHy48xaqBkkAc5vVYJ.json  5Fhhzf8ZNH2mkP5YddoJ6kj6PfsnB49BxReRopc6CRvqVNrQ.json
docker/: Dockerfile  Dockerfile copy.ink  Dockerfile.aleph_node  Dockerfile.ink  Dockerfile.ink_new  Dockerfile.testing
scripts/: cli.sh  deploy.sh  test.sh
tests/: Cargo.toml  README.md  bright_disputes.rs  bright_disputes_test.rs  helpers.rs  lib.rs
