[package]
name = "bright_disputes_cli"
version = "0.1.0"
authors = ["Michal Gralinski michal.gralinski@brightinventions.pl"]
edition = "2021"
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0"
inquire = "0.6.2"
rand = "0.8.5"
clap = { version = "4.0", features = ["derive"] }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
tokio = { version = "1.24.2", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["fmt", "json", "env-filter"] }

bright-disputes-lib = { path="lib" }
ark-std = { version = "^0.3.0", default-features = false }
ark-ed-on-bls12-381 = { version = "^0.3.0", features = ["r1cs"] }
ark-serialize = { version = "^0.3.0", default-features = false }
aleph_client = "3.0.0"
ink-wrapper-types = "0.5.0"
ink_primitives = "4.3.0"
liminal-ark-relations = { version = "0.4.0", path = "../aleph-node/relations/ark" }
proc-macro2 = "1.0.58"
