[package]
name = "bright-disputes-lib"
version = "0.1.0"
authors = ["Michal Gralinski michal.gralinski@brightinventions.pl"]
edition = "2021"
license = "MIT"
publish = false

[lib]
path = "lib.rs"

[dependencies]
anyhow = "1.0"
ark-ed-on-bls12-381 = { version = "^0.3.0", features = ["r1cs"] }
ark-serialize = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ink_primitives = "4.3.0"
aleph_client = "3.0.0"
liminal-ark-relations = { version = "0.4.0", path = "../../aleph-node/relations/ark" }
